metropolis: use //version
This switches over the Metropolis codebase from the previous build
stamping system to the new //version library.

Change-Id: I8ecb0c3b4b19098e0026215444bae9b34060440e
Reviewed-on: https://review.monogon.dev/c/monogon/+/2333
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/BUILD.bazel
+++ b/metropolis/node/core/BUILD.bazel
@@ -40,6 +40,8 @@ go_library(
         "//metropolis/pkg/sysctl",
         "//metropolis/pkg/tpm",
         "//metropolis/proto/api",
+        "//metropolis/version",
+        "//version",
         "@com_github_cenkalti_backoff_v4//:backoff",
         "@com_github_containerd_containerd//:containerd",
         "@com_github_containerd_containerd//namespaces",
