metropolis/node: add version to status
This implements submitting the Node's version to its' Status report to
the control plane.

This version is then displayed to the user in metroctl.

Change-Id: I70eadb9a7001b6e50931245e8a6274da2fbdc5bc
Reviewed-on: https://review.monogon.dev/c/monogon/+/2334
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/cli/metroctl/test/BUILD.bazel
+++ b/metropolis/cli/metroctl/test/BUILD.bazel
@@ -1,5 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
+# TODO(q3k): clean this up to just a go_test.
+
 go_test(
     name = "metroctl_test",
     srcs = ["test.go"],
@@ -16,6 +18,8 @@ go_test(
         "//metropolis/pkg/cmd",
         "//metropolis/test/launch/cluster",
         "//metropolis/test/util",
+        "//metropolis/version",
+        "//version",
     ],
 )
 
@@ -29,5 +33,7 @@ go_library(
         "//metropolis/pkg/cmd",
         "//metropolis/test/launch/cluster",
         "//metropolis/test/util",
+        "//metropolis/version",
+        "//version",
     ],
 )
