treewide: update node_exporter and dependencies
Change-Id: I57f73c01905e77459b6c70a196c76ba331c80d8b
Reviewed-on: https://review.monogon.dev/c/monogon/+/2347
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/.bazelrc
+++ b/.bazelrc
@@ -57,7 +57,9 @@ test --test_output=errors
 #     build k8s without cloud provider and docker support
 # nowasm:
 #     disable wasm plugin support in sqlc
-build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo
+# nobtrfs:
+#     disable btrfs support in node_exporter
+build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs
 
 # kvm_debug:
 #     prevent stackoverflows for gvisor
