third_party/go: disable unused node_exporter collectors
Change-Id: I56115f0b37aeeaca7e7b1648e423f61476186563
Reviewed-on: https://review.monogon.dev/c/monogon/+/2369
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -57,13 +57,13 @@ test --test_output=errors
 #     build k8s without cloud provider and docker support
 # nowasm:
 #     disable wasm plugin support in sqlc
-# nobtrfs:
-#     disable btrfs support in node_exporter
-build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs
+# nobtrfs,nozfs,notapestats,norapl:
+#     disable node_exporter features we don't need
+build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs,nozfs,notapestats,norapl
 
 # kvm_debug:
 #     prevent stackoverflows for gvisor
-build:dbg --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,kvm_debug
+build:dbg --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs,nozfs,notapestats,norapl,kvm_debug
 
 # Build with C++17.
 build --cxxopt=-std=c++17
