--- a/metropolis/test/e2e/BUILD.bazel
+++ b/metropolis/test/e2e/BUILD.bazel
@@ -21,7 +21,7 @@ localregistry_manifest(
     name = "testimages_manifest",
     images = [
         "//metropolis/test/e2e/selftest:selftest_image",
-        "//metropolis/vm/smoketest:smoketest_container",
+        "//metropolis/vm/smoketest:smoketest_image",
     ],
 )
 
