--- a/metropolis/test/e2e/preseedtest/BUILD.bazel
+++ b/metropolis/test/e2e/preseedtest/BUILD.bazel
@@ -1,16 +1,50 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
-    name = "preseedtest",
+    name = "preseedtest_lib",
     srcs = ["main.go"],
     importpath = "source.monogon.dev/metropolis/test/e2e/preseedtest",
     visibility = ["//visibility:private"],
 )
 
-go_image(
-    name = "preseedtest_image",
-    embed = [":preseedtest"],
+go_binary(
+    name = "preseedtest",
+    embed = [":preseedtest_lib"],
     pure = "on",
+    visibility = ["//visibility:private"],
+)
+
+load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
+
+platform_transition_binary(
+    name = "preseedtest_transitioned",
+    binary = ":preseedtest",
+    target_platform = "//build/platforms:linux_amd64_static",
+    visibility = ["//visibility:private"],
+)
+
+load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
+
+pkg_tar(
+    name = "preseedtest_layer",
+    srcs = [":preseedtest_transitioned"],
+    visibility = ["//visibility:private"],
+)
+
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+
+oci_image(
+    name = "preseedtest_image",
+    base = "@distroless_base",
+    entrypoint = ["/preseedtest"],
+    tars = [":preseedtest_layer"],
+    visibility = ["//visibility:private"],
+    workdir = "/app",
+)
+
+oci_tarball(
+    name = "preseedtest_tarball",
+    image = ":preseedtest_image",
+    repo_tags = ["bazel/metropolis/test/e2e/preseedtest:preseedtest_image"],
     visibility = ["//metropolis/node:__pkg__"],
 )
