--- a/metropolis/test/e2e/selftest/BUILD.bazel
+++ b/metropolis/test/e2e/selftest/BUILD.bazel
@@ -1,16 +1,43 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
-    name = "selftest",
+    name = "selftest_lib",
     srcs = ["main.go"],
     importpath = "source.monogon.dev/metropolis/test/e2e/selftest",
     visibility = ["//visibility:private"],
 )
 
-go_image(
-    name = "selftest_image",
-    embed = [":selftest"],
+go_binary(
+    name = "selftest",
+    embed = [":selftest_lib"],
     pure = "on",
+    visibility = ["//visibility:private"],
+)
+
+load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
+
+platform_transition_binary(
+    name = "selftest_transitioned",
+    binary = ":selftest",
+    target_platform = "//build/platforms:linux_amd64_static",
+    visibility = ["//visibility:private"],
+)
+
+load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
+
+pkg_tar(
+    name = "selftest_layer",
+    srcs = [":selftest_transitioned"],
+    visibility = ["//visibility:private"],
+)
+
+load("@rules_oci//oci:defs.bzl", "oci_image")
+
+oci_image(
+    name = "selftest_image",
+    base = "@distroless_base",
+    entrypoint = ["/selftest"],
+    tars = [":selftest_layer"],
     visibility = ["//metropolis/test/e2e:__pkg__"],
+    workdir = "/app",
 )
