--- a/cloud/takeover/e2e/BUILD.bazel
+++ b/cloud/takeover/e2e/BUILD.bazel
@@ -10,10 +10,10 @@ go_test(
     ],
     deps = [
         "//cloud/agent/api",
-        "//metropolis/cli/pkg/datafile",
         "//metropolis/pkg/fat32",
         "//metropolis/pkg/freeport",
         "@com_github_pkg_sftp//:sftp",
+        "@io_bazel_rules_go//go/runfiles:go_default_library",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_crypto//ssh",
     ],
