--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -18,6 +18,7 @@ single_version_override(
 bazel_dep(name = "bazel_skylib", version = "1.5.0")
 bazel_dep(name = "rules_pkg", version = "0.9.1")
 bazel_dep(name = "rules_oci", version = "1.6.0")
+bazel_dep(name = "aspect_bazel_lib", version = "2.4.1")
 
 oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
 
