--- a/cloud/shepherd/provider/equinix/BUILD.bazel
+++ b/cloud/shepherd/provider/equinix/BUILD.bazel
@@ -72,7 +72,7 @@ oci_image(
     entrypoint = ["/equinix"],
     tars = [
         ":equinix_layer",
-        "//cloud/takeover:takeover_layer",
+        "//cloud/agent/takeover:takeover_layer",
     ],
     visibility = ["//visibility:public"],
     workdir = "/app",
