m/c/metroctl: split cmd_install for future changes
Change-Id: I99119cc8f5e3728cf832427d1cad79f69fbd48bc
Reviewed-on: https://review.monogon.dev/c/monogon/+/2793
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     srcs = [
         "cmd_certs.go",
         "cmd_install.go",
+        "cmd_install_usb.go",
         "cmd_k8s_configure.go",
         "cmd_k8scredplugin.go",
         "cmd_node.go",
