--- a/metropolis/test/launch/cluster/BUILD.bazel
+++ b/metropolis/test/launch/cluster/BUILD.bazel
@@ -39,6 +39,7 @@ go_library(
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_net//proxy",
+        "@org_golang_x_sys//unix",
         "@org_uber_go_multierr//:multierr",
     ],
 )
